# buildbot

./: .dockerignore  .gitattributes  .gitignore  Cargo.toml  Dockerfile  README.md  README.zh.md  master.cfg  master.cfg.example
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml  cidb.yml  release.yml
buildbot-tools/: Cargo.toml
buildbot-tools/src/: download_release_main.rs  gather_dependabot_main.rs
src/: error.rs  lib.rs  main.rs
src/api/: handlers.rs  mod.rs  routes.rs
src/config/: loader.rs  mod.rs
src/db/: mod.rs
src/db/entities/: build_data.rs  build_properties.rs  build_request_claims.rs  build_requests.rs  build_set_properties.rs  build_set_sourcestamps.rs  build_sets.rs  builder_masters.rs  builder_tags.rs  builders.rs  builds.rs  change_files.rs  change_properties.rs  change_sources.rs  change_users.rs  changes.rs  changesource_masters.rs  codebase.rs  codebase_branches.rs  codebase_commits.rs  configured_workers.rs  connected_workers.rs  dispatcher_jobs.rs  dispatcher_runners.rs  log_chunks.rs  logs.rs  masters.rs  mod.rs  object_state.rs  objects.rs  patches.rs  projects.rs  scheduler_changes.rs  scheduler_masters.rs  schedulers.rs  source_stamps.rs  steps.rs  tags.rs  test_code_path.rs  test_name.rs  (+5 more)
src/db/migrations/: initializer.rs  mod.rs
src/db/migrations/m20250101_init/: mod.rs
src/db/migrations/m20250102_secondary/: mod.rs
src/db/migrations/m20250103_dispatcher/: mod.rs
src/dispatcher/: job.rs  matrix.rs  mod.rs  repo.rs  runner.rs  sandbox.rs  script.rs
src/master/: config.rs  mod.rs  service.rs
src/worker/: connection.rs  mod.rs  worker.rs
src/www/: mod.rs  server.rs
src/www/templates/: builders.html  dashboard.html  index.html  workers.html
tests/: integration_test.rs
www/: dashboard.html  index.html  job_detail.html  jobs.html  runners.html
www/static/: app.js  style.css
