[package]
name = "buildbot"
version = "0.1.0"
edition = "2024"
description = "A Rust re-implementation of Buildbot CI system"
authors = ["Buildbot Team"]

[dependencies]
# Async runtime
tokio = { version = "1.51.1", features = ["full"] }

# Web framework
actix-web = "4"
actix-rt = "2"
actix-files = "0.6"

# Database
sea-orm = { version = "1", features = ["runtime-tokio-native-tls", "sqlx-sqlite", "sqlx-postgres", "macros", "serde_json"] }
sea-orm-migration = { version = "1", features = ["runtime-tokio-native-tls", "sqlx-sqlite", "sqlx-postgres"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "postgres", "macros", "chrono", "json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Configuration
serde_yaml = "0.9"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Async utilities
futures = "0.3"
async-trait = "0.1"
bytes = "1.5"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.6", features = ["v4", "serde"] }

# CLI argument parsing
clap = { version = "4.4", features = ["derive"] }

# HTTP client
reqwest = { version = "0.13", features = ["json"] }

# dotenv
dotenvy = "0.15"

# Base64 encoding
base64 = "0.22.1"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.9"

[features]
default = []
sqlite = ["sea-orm/sqlx-sqlite"]
postgres = ["sea-orm/sqlx-postgres"]
