[package]
name = "buildbot-tools"
version = "0.1.0"
edition = "2021"
description = "Buildbot CI tools - gather dependabot PRs and download releases"
authors = ["Buildbot Team"]

[[bin]]
name = "gather-dependabot"
path = "src/gather_dependabot_main.rs"

[[bin]]
name = "download-release"
path = "src/download_release_main.rs"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4.4", features = ["derive"] }

[profile.release]
opt-level = 3
lto = true